--- a/1. 2920.ipynb
+++ b/1. 2920.ipynb
@@ -52,86 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 3 5 7\n"
+      "1 2 3 4 5 6 7 8\n",
+      "ascending\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[3, 5, 7]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = list(map(int, input().split(' ')))\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 정.선.아\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['정', '선', '아']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = input().split('.')\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 2.4.7\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2, 4, 7]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = list(map(int,input().split('.')))\n",
-    "a"
+    "#21.03.07\n",
+    "array = list(map(int, input().split(' ')))\n",
+    "flag = True\n",
+    "for i in range(len(array)-1):\n",
+    "    if abs(array[i+1] - array[i]) != 1:\n",
+    "        flag = False\n",
+    "        break\n",
+    "\n",
+    "if flag:\n",
+    "    if array[0] == 1:\n",
+    "        print(\"ascending\")\n",
+    "    else:\n",
+    "        print(\"descending\")\n",
+    "else:\n",
+    "    print(\"mixed\")"
    ]
   },
   {
@@ -158,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1+"
   }
  },
  "nbformat": 4,
