--- a/1. 2920.ipynb
+++ b/1. 2920.ipynb
@@ -84,6 +84,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 8 7\n",
+      "mixed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "a = list(map(int, input().split(' ')))\n",
+    "\n",
+    "ascending = True\n",
+    "descending = True #flag를 두개 줌\n",
+    "\n",
+    "# len따라 다른 게 아니니까 그냥 1,8까지\n",
+    "for i in range(1, 8):\n",
+    "    if a[i] > a[i - 1]:\n",
+    "        # 1 차이나는 것보다 크기만 비교함\n",
+    "        descending = False\n",
+    "    elif a[i] < a[i - 1]:\n",
+    "        ascending = False\n",
+    "        \n",
+    "if ascending:\n",
+    "    print('ascending')\n",
+    "elif descending:\n",
+    "    print('descending')\n",
+    "else:\n",
+    "    print('mixed')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
