--- a/9. 2750_수 정렬.ipynb
+++ b/9. 2750_수 정렬.ipynb
@@ -1,36 +1,48 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-63d4500cb65d>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-63d4500cb65d>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    nums.sort()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "#오름차순 정렬\n",
-    "n = 5\n",
-    "nums = list()\n",
-    "for _ in range(n):\n",
-    "    nums.append(int(input())\n",
+    "문제\n",
+    "N개의 수가 주어졌을 때, 이를 오름차순으로 정렬하는 프로그램을 작성하시오.\n",
     "\n",
-    "nums.sort()\n",
+    "입력\n",
+    "첫째 줄에 수의 개수 N(1 ≤ N ≤ 1,000)이 주어진다. 둘째 줄부터 N개의 줄에는 숫자가 주어진다. 이 수는 절댓값이 1,000보다 작거나 같은 정수이다. 수는 중복되지 않는다.\n",
     "\n",
-    "print('\\n'.join(nums))"
+    "출력\n",
+    "첫째 줄부터 N개의 줄에 오름차순으로 정렬한 결과를 한 줄에 하나씩 출력한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5\n",
+    "5\n",
+    "2\n",
+    "3\n",
+    "4\n",
+    "1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n",
+      " 5\n",
+      " 2\n",
+      " 3\n",
+      " 4\n",
+      " 1\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -44,35 +56,36 @@
     }
    ],
    "source": [
-    "nums = [5,2,3,4,1]\n",
-    "nums.sort()\n",
-    "nums = map(str,nums)\n",
-    "print('\\n'.join(nums))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''맞았습니다!!'''\n",
+    "'''제출 -> 맞음'''\n",
     "n = int(input())\n",
     "nums = list()\n",
     "\n",
-    "for i in range(n):\n",
+    "for _ in range(n):\n",
     "    nums.append(int(input()))\n",
-    "   \n",
+    "\n",
     "nums.sort()\n",
-    "nums = map(str, nums)\n",
-    "print('\\n'.join(nums))"
+    "\n",
+    "for i in nums:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n",
+      " 5\n",
+      " 2\n",
+      " 3\n",
+      " 4\n",
+      " 1\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -86,18 +99,22 @@
     }
    ],
    "source": [
-    "#선택 정렬 알고리즘 사용해보기\n",
-    "n = 5\n",
-    "nums = [5,2,3,4,1]\n",
+    "'''해설'''\n",
+    "# 1.선택 정렬 알고리즘\n",
+    "n = int(input())\n",
+    "array = list()\n",
     "\n",
-    "for i in range(n):\n",
-    "    min_idx = i\n",
-    "    for j in range(i+1,n):\n",
-    "        if nums[min_idx] > nums[j]:\n",
-    "            min_idx = j\n",
-    "    nums[i], nums[min_idx] = nums[min_idx],nums[i]\n",
+    "for _ in range(n):\n",
+    "    array.append(int(input()))\n",
+    "    \n",
+    "for i  in range(n):\n",
+    "    min_index = i   #가장 작은 원소의 인덱스\n",
+    "    for j in range(i+1, n):\n",
+    "        if array[min_index] > array[j]:\n",
+    "            min_index = j\n",
+    "    array[i], array[min_index] = array[min_index], array[i]\n",
     "\n",
-    "for i in nums:\n",
+    "for i in array: \n",
     "    print(i)"
    ]
   },
